# PESU_IO

Agentic/Llama_index/utils/: schema.py
Assignment-1/Website/: README.md  main.py
Assignment-1/Website/data/: website_content.md
naiveRAG/: embedded_chunks.json  main.py  output.md  rag.py
projectrag/: README.md  pyproject.toml  report.md
projectrag/src/projectrag/: crew.py  main.py
projectrag/src/projectrag/config/: agents.yaml  tasks.yaml
