[project]
name = "projectrag"
version = "0.1.0"
description = "ProjectRAG using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
projectrag = "projectrag.main:run"
run_crew = "projectrag.main:run"
train = "projectrag.main:train"
replay = "projectrag.main:replay"
test = "projectrag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
